--- a/pom.xml
+++ b/pom.xml
@@ -81,12 +81,13 @@
 			<artifactId>commons-dbcp2</artifactId>
 			<version>2.3.0</version>
 		</dependency>
-
+		
 		<dependency>
-			<groupId>commons-fileupload</groupId>
-			<artifactId>commons-fileupload</artifactId>
-			<version>1.3.3</version>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.3.2</version>
 		</dependency>
+
 
 		<!-- Apache Commons IO -->
 		<dependency>
@@ -95,13 +96,33 @@
 			<version>2.6</version>
 		</dependency>
 
+		<!-- Fileupload -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.3</version>
+		</dependency>
+
+		<!-- Apache POI: Excel Generation -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.17</version>
+		</dependency>
+
+		<!-- PDF Generation: New Version -->
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>5.5.13</version>
+		</dependency>
+
 		<!-- PDF Generation: standard version -->
 		<dependency>
 			<groupId>com.lowagie</groupId>
 			<artifactId>itext</artifactId>
 			<version>2.1.7</version>
 		</dependency>
-
 	</dependencies>
 
 
