404 commit not found

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -37,5 +37,10 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	
+	<error-page>
+	 <error-code>404</error-code>
+	 <location>/WEB-INF/templates/404.html</location>
+	 </error-page>
+	
 	
 </web-app>
